# artificial-life-wasm

./: .gitignore  Cargo.toml  README.md  main.py  package.json
.github/workflows/: deploy-pages.yml
scripts/: build-pages.sh  build-web.sh  devcert.sh  serve-web.sh  serve_web.py
src/: lib.rs
web/: app.js  coi-serviceworker.js  index.html  style.css
