[package]
name = "artificial-life-wasm"
version = "0.1.0"
edition = "2024"
description = "Browser-native WebAssembly port of the artificial life simulation"

[features]
default = []
parallel = ["dep:rayon", "dep:wasm-bindgen-rayon"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
rand = { version = "0.9.2", default-features = false, features = ["small_rng", "std"] }
rand_distr = "0.5.1"
rayon = { version = "1.11.0", optional = true }
wasm-bindgen = "=0.2.106"
wasm-bindgen-rayon = { version = "1.3.0", features = ["no-bundler"], optional = true }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
